--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "use-future",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "description": "Typesafe promise handling for React",
-  "main": "dist/useFuture.js",
-  "types": "dist/useFuture.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf node_modules dist",
