--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "react": "^18.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^15.0.7",
     "@types/react": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "jsdom": "^24.0.0",
     "prettier-eslint-cli": "^8.0.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^1.6.0"
   },
   "files": [
     "dist"
