--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.3",
   "type": "module",
   "description": "Typesafe promise handling for React",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/use-future.js",
+  "types": "dist/use-future.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "vite build",
     "clean": "rm -rf node_modules dist",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
     "format": "prettier -w ."
   },
   "repository": {
@@ -32,6 +32,7 @@
     "jsdom": "^24.0.0",
     "prettier-eslint-cli": "^8.0.1",
     "typescript": "^5.0.0",
+    "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.6.0"
   },
   "files": [
